# marguerite

./: CMakeLists.txt  README.md
io/: BinaryStream.cpp  BinaryStream.hpp  BinaryStreamReader.cpp  BinaryStreamReader.hpp  BinaryStreamWriter.cpp  BinaryStreamWriter.hpp
net/: Socket.cpp  Socket.hpp  TcpServer.cpp  TcpServer.hpp
threading/: ThreadPool.cpp  ThreadPool.hpp
unit_tests/: main.cpp
